# generative-ai

./: LICENSE  README.md
Image/ecommerce_image_processing/: README.md  extract_ecommerce_product.py  pyproject.toml
Image/image_evaluation_framework/: README.md  human_image_evaluation.py  human_llm_alignment.csv  llm_as_a_judge.py  main.py  product_recontext_events.json  pyproject.toml  retail_image_processing_agent.py
Image/image_evaluation_framework/data/: images_to_process.json
langGraph/multiagents_framework/: .env.example  langGraph_multimodal_multi_agents.py  readme.md  requirements.txt
langraph/: langraph_multimodal_multi_agents.py
langraph/multiagents_framework/: langraph_multimodal_multi_agents.py  readme.md  requirements.txt
